# Infosys_SpringBoard_Internship

./: .gitignore  README.md
CSV data to Vector DB(Qdrant)/: upload_to_Qdrant.py
embedding-code and csv/: embedding.py
files/: Infosys SpringBoard Internship Documentation.docx
frontend/: index.html  search.html
frontend/css/: style.css
frontend/js/: app.js
semanticsearchproject/: .env.example  .gitignore  README.md  api.py  app.py  applyembeddings.py  collecting.py  copy.csv  download_csv.py  duplicates_report.csv  embedd.py  gemini_config.py  merge.py  pyproject.toml  requirements.txt  run_collecting.ps1  setup_env.ps1  summarize_video.py  test_vector.py  vector_store.py  vector_test.py  youtube_embeddings.index
